--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -12,8 +12,20 @@
 <title>{%block title%}{%endblock %}</title>
 
 
-
  <style>{% block css %}{% endblock %}</style>
+
+
+
+<style>
+::-webkit-scrollbar {
+    width: 17px;
+    background-color: #343535
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #909596;
+}
+</style>
 
 
 
