--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -19,6 +19,15 @@
     width: 150px;
     height: 160px;
 }
+.mt-0{
+    font-size:20px;
+}
+.card-title{
+    font-size:15px;
+}
+#des{
+    font-size:13px;
+}
 }
 {% endblock %}
 
@@ -39,7 +48,7 @@
   <div>
     <a href="/shop/productview/{{i.id}}"><h3 class="mt-0" style="margin-left:20px;">{{i.product_name}}</h3></a>
     <h5 class="card-title" style="margin-left:20px;">Price:-${{i.price}}</h5>
-    <h6 style="margin-left:20px;">{{i.des}}</h6>
+    <h6 style="margin-left:20px;" id="des">{{i.des}}</h6>
     <a href="/shop/order/{{i.id}}" class="btn btn-primary" style="margin-left:20px;">Buy Now</a>
   </div>
 </div>
