--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
 <title>{%block title%}{%endblock %}</title>
@@ -25,6 +25,14 @@
     border-radius: 20px;
     background-color: #909596;
 }
+#cart{
+  position: relative;
+  left:15px;
+}
+.nav-link{
+  position: relative;
+  left: 10px;
+}
 </style>
 
 
@@ -32,7 +40,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/shop">My Awesome Cart</a>
+  <a class="navbar-brand" href="/shop" id="cart">My Awesome Cart</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -44,12 +52,12 @@
 
 
       <li class="nav-item active">
-        <a class="nav-link" href="/shop">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="/shop">Home</a>
       </li>
 
 
       <li class="nav-item active">
-        <a class="nav-link" href="/shop/about">About us</a>
+        <a class="nav-link active" href="/shop/about">About us</a>
       </li>
 
 
@@ -69,7 +77,7 @@
 
 {% if user.is_authenticated %}
       <li class="nav-item active">
-        <a class="nav-link" href="/shop/contact">Contact Us</a>
+        <a class="nav-link active" href="/shop/contact">Contact Us</a>
       </li>
 {% else %}
 <style>
@@ -84,7 +92,7 @@
 </style>
 
 <li class="nav-item active">
-<button class="nav-link" type="button" data-toggle="modal" data-target="#contact" id="button">
+<button class="nav-link active" type="button" data-toggle="modal" data-target="#contact" id="button">
   Contact Us
 </button>
 </li>
@@ -124,7 +132,7 @@
 
 {% if user.is_authenticated %}
       <li class="nav-item active">
-        <a class="nav-link" href="/shop/sellproduct" data-target="#exampleModal">Sell Your Products</a>
+        <a class="nav-link active" href="/shop/sellproduct" data-target="#exampleModal">Sell Your Products</a>
     </li>
 
 {% else %}
@@ -193,7 +201,7 @@
 }
 #navbarDropdown{
   position:relative;
-  left:24px;
+  left:2px;
 }
 </style>
 
@@ -212,88 +220,8 @@
   <li><a class="dropdown-item" href="/shop/view"><p style="color:black;"><b>change view</b></p></a></li>
 {% endif %}
 </ul>
+</li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<style>
-        .dropbtn {
-            background-color: transparent;
-            color: white;
-
-            font-size: 16px;
-            border: none;
-            cursor: pointer;
-        }
-  
-        .dropdown {
-            position: relative;
-            display: inline-block;
-            left: -30px;
-        }
-  
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 
-                0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-  
-        .dropdown-content a {
-            color: black;
-            padding: 12px 17px;
-            text-decoration: none;
-            display: block;
-        }
-  
-        .dropdown-content a:hover {
-            background-color: #f1f1f1;
-        }
-        .avatar {
-            vertical-align: middle;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-}
-  
-        .dropdown:hover .dropdown-content {
-            display: block;
-            left: -50px;
-
-
-        }
-    </style>
-    {%if user.is_authenticated%}
-    <center>
-        <div class="dropdown">
-            <button class="dropbtn">
-                <img src=
-"https://www.searchpng.com/wp-content/uploads/2019/02/Deafult-Profile-Pitcher.png"
-                    width="35" height="35">
-            </button> 
-            <div class="dropdown-content">
-                <a href="/shop/profile">View Profile</a>
-                <a href="#">Settings</a>
-            </div>
-        </div>
-        {%endif%}
-
-</div>
 </nav>
 {% block body %}
 {% endblock %}
@@ -301,23 +229,13 @@
 
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 
 
-<!-- Optional JavaScript; choose one of the two! -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
