--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -10,6 +10,12 @@
     width: 200px;
     height: 170px;
 }
+@media (max-width: 767px){
+.flex-shrink-0{
+    width: 140px;
+    height: 120px;
+}
+}
 </style>
 
 <br>
@@ -18,8 +24,8 @@
   <div>
     <h3 class="mt-0">Product Name:-{{order.product_name}}</h3>
     <h5>Price:-<b>${{order.product_price}}</b></h6>
-    <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-3" id="box">View Product</button></p></a>
-    <a href="/shop/delete/{{order.product_id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3" id="box">Cancel Order</button></p></a>
+    <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-3" >View Product</button></p></a>
+    <a href="/shop/delete/{{order.product_id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
   </div>
 </div>
 <br>
