--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -19,6 +19,7 @@
 </style>
 
 <br>
+{{order.id}}
 <div class="d-flex position-relative">
   <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
