--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -1,10 +1,20 @@
 {% extends 'shop/basic.html' %}
 {% block title %}Home{% endblock %}
 
+
+
 {% block css %}
+.d-block{
+    width:1200px;
+    height:530px;
+}
 #img{
     width: 280px;
     height: 300px;
+}
+.btn{
+    position:relative;
+    top:140px;
 }
 #hori{
   border-top: 3px solid black;
@@ -19,10 +29,67 @@
     width: 150px;
     height: 160px;
 }
+.mt-0{
+    font-size:20px;
+}
+.card-title{
+    font-size:15px;
+}
+#des{
+    font-size:13px;
+}
+.d-block{
+    width:700px;
+    height:210px;
+
+}
+.btn{
+    position:relative;
+    top:10px;
 }
 {% endblock %}
 
+
+
+
+
 {% block body %}
+
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://static.vecteezy.com/system/resources/previews/002/459/314/non_2x/shopping-online-store-for-sale-mobile-ecommerce-3d-blue-background-shop-online-on-mobile-app-24-hours-shopping-cart-credit-card-minimal-store-online-device-3d-rendered-free-vector.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://ak.picdn.net/shutterstock/videos/2896216/thumb/7.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.digitaldealer.com/wp-content/uploads/2017/11/Screen-Shot-2017-11-03-at-8.18.36-AM.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+
+
+
+
+
+
+
 
 
 
@@ -39,7 +106,7 @@
   <div>
     <a href="/shop/productview/{{i.id}}"><h3 class="mt-0" style="margin-left:20px;">{{i.product_name}}</h3></a>
     <h5 class="card-title" style="margin-left:20px;">Price:-${{i.price}}</h5>
-    <h6 style="margin-left:20px;">{{i.des}}</h6>
+    <h6 style="margin-left:20px;" id="des">{{i.des}}</h6>
     <a href="/shop/order/{{i.id}}" class="btn btn-primary" style="margin-left:20px;">Buy Now</a>
   </div>
 </div>
