--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -28,13 +28,13 @@ width:60%;
 
 #order1{
     color:black;
-    background-color:#00FCEB;
+    background-color:#04FF00;
 }
 
 
 #order2{
     color:black;
-    background-color:#00FCEB;
+    background-color:#04FF00;
 }
 
 #order1:hover{
@@ -163,7 +163,7 @@ width:60%;
 
 {% if user.is_authenticated %}
             <a type="button" class="btn btn-dark" data-toggle="modal" data-target="#order" id="order1">
-            Place Order
+            <b>Place Order</b>
             </a>
 
             <div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -187,7 +187,7 @@ width:60%;
 {% else %}
 
 <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#order" id="order2">
-Place Order
+<b>Place Order</b>
 </button>
 
 <div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
