--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -9,6 +9,14 @@
     width:1200px;
     height:530px;
 }
+#butt{
+  color: white;
+  background-color: green;
+}
+#butt:hover{
+  color:black;
+  background-color: green;
+}
 @media(max-width: 767px){
 .d-block{
     width:700px;
@@ -85,8 +93,9 @@
         </div><br>
         
         
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn" id="butt">Submit</button>
       </form></b>
+      <br>
 
 </div>
 
