--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -11,14 +11,6 @@
 </head>
 
 <body>
-<style>
-@media (max-width: 767px){
-.login-form form {
-    width: 90%;
-    padding: 20px 15px 20px;
-}
-}
-</style>
 
     <div class="container mt-1">
         <div class="row">
@@ -35,8 +27,20 @@
                     <tbody>
                       {% for d in data %}
                       <tr>
+<style>
+#img{
+    width: 200px;
+    height: 200px;
+}
+@media (max-width: 767px){
+#img{
+    width: 70px;
+    height: 70px;
+}
+}
+</style>
                         <th>{{forloop.counter}}</th>
-                        <th><img src="{{d.image.url}}" width="260px" height="270px"></a></th>
+                        <th><img src="{{d.image.url}}" id="img"></a></th>
                         <th><h4><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4></th>
                         <th><h5>${{d.price}}</h5></th>
                       {% endfor %}
