--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -37,12 +37,15 @@
     width: 70px;
     height: 70px;
 }
+#text{
+    font-size:15px;
+}
 }
 </style>
                         <th>{{forloop.counter}}</th>
                         <th><img src="{{d.image.url}}" id="img"></a></th>
-                        <th><h4><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4></th>
-                        <th><h5>${{d.price}}</h5></th>
+                        <th><h4 id="text"><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4></th>
+                        <th><h5 id="text">${{d.price}}</h5></th>
                       {% endfor %}
                     </tbody>
                   </table>
