--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -18,10 +18,9 @@
                 <table class="table">
                     <thead>
                       <tr>
-                        <th><h5>S/N</h5></th>
-                        <th><h5>Product Image</h5></th>
-                        <th><h5>Product Name</h5></th>
-                        <th><h5>Product Price</h5></th>
+                        <th><h5 id="text">Product Image</h5></th>
+                        <th><h5 id="text">Product Name</h5></th>
+                        <th><h5 id="text">Product Price</h5></th>
                       </tr>
                     </thead>
                     <tbody>
@@ -42,7 +41,6 @@
 }
 }
 </style>
-                        <th>{{forloop.counter}}</th>
                         <th><img src="{{d.image.url}}" id="img"></a></th>
                         <th><h4 id="text"><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4></th>
                         <th><h5 id="text">${{d.price}}</h5></th>
