--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -1,14 +1,34 @@
 {% extends 'shop/basic.html' %}
 {% block title%} {{product.product_name}} - My Awesome Cart{% endblock %}
 {% block body %}
+<style>
+#img{
+    width: 270px;
+    height: 240px;
+}
+#butt{
+    position: relative;
+    top: 30px;
+}
+@media (max-width:767px){
+#img{
+    width: 120px;
+    height: 100px;
+}
+#butt{
+    position: relative;
+    top:5px;
+}
+}
+</style>
 <div class="container my-4">
     <div class="row">
     <div class="col-md-4">
     <div class="row">
-        <img src="/media/{{product.image}}" width="280px" height="300px">
+        <img src="/media/{{product.image}}" id="img">
     </div>
 
-        <a href="/shop/order/{{product.id}}"><p style="margin-left:-1.9em;position:relative;top:10px;"><button class="btn btn-primary mx-3">Buy Now</button></p></a>
+        <a href="/shop/order/{{product.id}}"><button class="btn btn-primary mx-3" id="butt">Buy Now</button></a>
 
 
     </div>
