--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -29,8 +29,7 @@
     <br>
   </div>
   <div class="col-md-6 p-4 ps-md-0">
-    <h4 class="mt-0">Product Name:- {{product.product_name}}</h5>
-    <br>
+    <p class="mt-0" style="font-size:25px;">Product Name:-<b>{{product.product_name}}</b></p>
     <h5>Price:- ${{product.price}}</h5>
     <br>
     <p id ="des"><b>Description</b><br>{{product.des}}</p>
