--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -23,5 +23,11 @@ div.text{
 	margin-top:-100px;
   	text-align: center;
 }
-
+@media(max-width:767px){
+.responsive {
+  width:1000px;
+  height:500px;
+  background-color: transparent;
+}
+}
 </style>
