--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -24,10 +24,9 @@ div.text{
   	text-align: center;
 }
 @media(max-width:767px){
-.responsive {
-  width:1000px;
-  height:500px;
-  background-color: transparent;
+body{
+  width:500px;
+  height:100px
 }
 }
 </style>
