--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -21,12 +21,29 @@ body{
 
 div.text{
 	margin-top:-100px;
-  	text-align: center;
+  text-align: center;
 }
 @media(max-width:767px){
 body{
-  width:500px;
-  height:100px
+  background-color:#F8F8F8;
 }
+.responsive {
+  max-width:400%;
+  height: auto;
+  background-color: transparent;
+}
+
+#center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:0px;
+}
+
+div.text{
+  margin-top:-100px;
+  text-align: center;
+}
+@
 }
 </style>
