--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -29,12 +29,11 @@ body{
 }
 .responsive {
   max-width:400%;
-  height: auto;
+  height: 200%;
   background-color: transparent;
 }
 
 #center{
-  display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top:0px;
