--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -25,24 +25,6 @@ div.text{
 }
 @media(max-width:767px){
 body{
-  background-color:#F8F8F8;
-}
-.responsive {
-  max-width:400%;
-  height: 200%;
-  background-color: transparent;
-}
-
-#center{
-  margin-left: auto;
-  margin-right: auto;
-  margin-top:0px;
-}
-
-div.text{
-  font-size: 200px;
-  margin-top:-100px;
-  text-align: center;
-}
+  background-color:red;
 }
 </style>
