--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -4,8 +4,6 @@ body{
   background-color:#F8F8F8;
 }
 .responsive {
-  max-width: 100%;
-  height: auto;
   background-color: transparent;
 }
 
@@ -20,11 +18,6 @@ div.text{
   margin-top:-100px;
   text-align: center;
 }
-@media(max-width:767px){
-body{
-  background-color:red;
-}
-}
 </style>
-<img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
+<img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center" width="800px" height="600px;"/>
 <div class="text"><h1>Your Order Has Successfully Delivered<br><button type="button" onclick="history.back()"><u>Go Back</u></button></h1></div>
