--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -1,7 +1,7 @@
 {% load static %}
 <style>
 body{
-  background-color:#F8F8F8;
+  background-color:red;
 }
 .responsive {
   background-color: transparent;
