--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -40,7 +40,7 @@
 }
 .d-block{
     width:700px;
-    height:210px;
+    height:180px;
 
 }
 .btn{
@@ -102,11 +102,11 @@
 
 
 <div class="d-flex position-relative">
-  <img src="/media/{{i.image}}" class="flex-shrink-0 me-3" alt="..." id="img">
+  <a href="/shop/productview/{{i.id}}"><img src="/media/{{i.image}}" class="flex-shrink-0 me-3" alt="..." id="img"></a>
   <div>
     <a href="/shop/productview/{{i.id}}"><h3 class="mt-0" style="margin-left:20px;">{{i.product_name}}</h3></a>
     <h5 class="card-title" style="margin-left:20px;">Price:-${{i.price}}</h5>
-    <h6 style="margin-left:20px;" id="des">{{i.des}}</h6>
+    <h6 style="margin-left:20px;" id="des">{{i.des|slice:"0:80"}}...</h6>
     <a href="/shop/order/{{i.id}}" class="btn btn-primary" style="margin-left:20px;">Buy Now</a>
   </div>
 </div>
