--- a/templates/shop/orderrequest.html
+++ b/templates/shop/orderrequest.html
@@ -3,7 +3,7 @@
 {%block body%}
 {%if user.is_authenticated%}
 {% for order in order %}
-{% if request.user.id == order.user_uid %}
+{% if request.user.id == order.admin_id %}
 
 <style>
 .flex-shrink-0{
@@ -22,10 +22,10 @@
 <div class="d-flex position-relative">
   <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
-    <h4 class="mt-0">Product Name:-<b>{{order.product_name}}</b></h4>
-    <h5>Price:-<b>${{order.product_price}}</b></h6>
-    <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-3" >View Product</button></p></a>
-    <a href="/shop/delete/{{order.id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
+    <h3 class="mt-0">Buyer Name:-{{order.name}}</h3>
+    <h4>Email Address:-{{order.email}}</h4>
+    <h4>Address:-{{order.address2}},{{order.address1}}</h4>
+    <h4>Phone number:-<b>{{order.phone}}</b></h4>
   </div>
 </div>
 <br>
