--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -1,14 +1,9 @@
 {% load static %}
-<img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
-<div class="text"><h1>Your Order Has Successfully Delivered<br><button type="button" onclick="history.back()"><u>Go Back</u></button></h1></div>
-
 <style>
 body{
-	background-color:#F8F8F8;
+  background-color:#F6F6F6;
 }
 .responsive {
-  max-width: 100%;
-  height: auto;
   background-color: transparent;
 }
 
@@ -20,8 +15,15 @@ body{
 }
 
 div.text{
-	margin-top:-100px;
-  	text-align: center;
+  margin-top:-100px;
+  text-align: center;
 }
-
+@media (max-width: 450px){
+.reponsive{
+  width:20px;
+  height:20px;
+}
+}
 </style>
+<img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center" width="800px" height="600px;"/>
+<div class="text"><h1>Your Order Has Successfully Delivered<br><button type="button" onclick="history.back()"><u>Go Back</u></button></h1></div>
