--- a/templates/shop/yourproduct.html
+++ b/templates/shop/yourproduct.html
@@ -12,8 +12,11 @@
 }
 @media (max-width: 767px){
 .flex-shrink-0{
-    width: 140px;
+    width: 130px;
     height: 120px;
+}
+h3,h4{
+  font-size: 12px;
 }
 }
 </style>
