--- a/templates/shop/yourproduct.html
+++ b/templates/shop/yourproduct.html
@@ -12,8 +12,11 @@
 }
 @media (max-width: 767px){
 .flex-shrink-0{
-    width: 140px;
+    width: 130px;
     height: 120px;
+}
+h3,h4{
+  font-size: 12px;
 }
 }
 </style>
@@ -22,8 +25,10 @@
 <div class="d-flex position-relative">
   <img src="/media/{{product.image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
-    <h3 class="mt-0">product Name:-{{product.product_name}}</h3>
-    <h4>product price:-{{product.price}}</h4>
+    <h3 class="mt-0"><b>Product name:-</b>{{product.product_name}}</h3>
+    <h4><b>Product price:-</b>${{product.price}}</h4>
+    <h4><b>Product Category:-</b>{{product.category}}</h4>
+    <a href="/shop/productview/{{product.id}}">visit product</a>
   </div>
 </div>
 <br>
