--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -66,7 +66,7 @@ width:60%;
         <label for="pn">Product Name:-</label>
     <input id="pn" readonly="readonly" class="form-control" name="product_name" value="{{product.product_name}}"></input><br>
         <label for="pr">Product price:-</label>
-    <input id="pr" readonly="readonly" class="form-control" value="{{product.price}}" name="product_price"></input><br>
+    <input id="pr" readonly="readonly" class="form-control" value="${{product.price}}" name="product_price"></input><br>
 
     </div>
     </div>
