--- a/templates/shop/yourproduct.html
+++ b/templates/shop/yourproduct.html
@@ -16,7 +16,7 @@
     height: 120px;
 }
 h3,h4{
-  font-size: 12px;
+  font-size: 14px;
 }
 }
 </style>
@@ -42,7 +42,7 @@ h3,h4{
 {% endif %}
 {% endfor %}
 {%else%}
-<h2>Please sign in to see your Orders</h2>
+<h2>Please sign in to see your Selled Products</h2>
 <a href="/" class="btn btn-danger">Sign in Here</a>
 {%endif%}
 {%endblock%}
