--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -15,6 +15,9 @@
     width: 140px;
     height: 120px;
 }
+h4,h5,a{
+  font-size: 14px;
+}
 }
 </style>
 
@@ -23,7 +26,7 @@
   <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
     <h4 class="mt-0">Product Name:-<b>{{order.product_name}}</b></h4>
-    <h5>Price:-<b>{{order.product_price}}</b></h6>
+    <h5>Price:-<b>${{order.product_price}}</b></h6>
     <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-3" >View Product</button></p></a>
     <a href="/shop/delete/{{order.id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
   </div>
