--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -25,8 +25,8 @@ h4,h5,a{
 <div class="d-flex position-relative">
   <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
-    <h4 class="mt-0">Product Name:-<b>{{order.product_name}}</b></h4>
-    <h5>Price:-<b>${{order.product_price}}</b></h6>
+    <h4 class="mt-0">Product Name:-<b><u>{{order.product_name}}</u></b></h4>
+    <h5>Price:-<b>{{order.product_price}}</b></h6>
     <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-3" >View Product</button></p></a>
     <a href="/shop/delete/{{order.id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
   </div>
